hphp/hack/test/typecheck/reactive/reactive_calls1.php.exp
File "reactive_calls1.php", line 18, characters 3-7:
Reactive functions can only call other reactive functions (Typing[4200])
